fixed alignment in the table

--- a/HW#3-CSS-Tables/css/style.css
+++ b/HW#3-CSS-Tables/css/style.css
@@ -68,3 +68,6 @@ i.white {
   color: #ffffff;
   font-weight: bold;
 }
+.simple img {
+  margin-right: 5px;
+}
